--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
     buildFeatures {
         viewBinding true
     }
-    dataBinding{
+    dataBinding {
         enabled true
     }
 }
@@ -96,6 +96,9 @@ dependencies {
     androidTestImplementation "androidx.navigation:navigation-testing:$navigation_version"
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    androidTestImplementation "io.mockk:mockk:1.13.3"
+
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation "io.mockk:mockk:1.13.3"
