--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,35 @@ android {
     dataBinding {
         enabled true
     }
+    packagingOptions {
+//        resources.excludes.add("META-INF/LICENSE")
+//        resources.pickFirst 'META-INF/LICENSE'
+//        resources.excludes.apply {
+//            add("META-INF/LICENSE")
+//            add("META-INF/*.properties")
+//            add("META-INF/AL2.0")
+//            add("META-INF/LGPL2.1")
+//        }
+//        pickFirst 'META-INF/DEPENDENCIES'
+//        pickFirst 'META-INF/LICENSE'
+//        pickFirst 'META-INF/LICENSE.txt'
+//        pickFirst 'META-INF/license.txt'
+//        pickFirst 'META-INF/NOTICE'
+//        pickFirst 'META-INF/NOTICE.txt'
+//        pickFirst 'META-INF/notice.txt'
+//        pickFirst 'META-INF/ASL2.0'
+//        pickFirst "META-INF/*.kotlin_module"
+//
+//        resources.pickFirsts 'META-INF/DEPENDENCIES'
+//        resources.pickFirst  'META-INF/LICENSE'
+//        resources.pickFirst  'META-INF/LICENSE.txt'
+//        resources.pickFirst  'META-INF/license.txt'
+//        resources.pickFirst  'META-INF/NOTICE'
+//        resources.pickFirst  'META-INF/NOTICE.txt'
+//        resources.pickFirst  'META-INF/notice.txt'
+//        resources.pickFirst  'META-INF/ASL2.0'
+//        resources.pickFirst  "META-INF/*.kotlin_module"
+    }
 }
 
 dependencies {
