--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ android {
         enabled true
     }
     packagingOptions {
-//        resources.excludes.add("META-INF/LICENSE")
+        resources.excludes.add("META-INF/LICENSE.md")
+        resources.excludes.add("META-INF/LICENSE-notice.md")
 //        resources.pickFirst 'META-INF/LICENSE'
 //        resources.excludes.apply {
 //            add("META-INF/LICENSE")
@@ -111,24 +112,23 @@ dependencies {
     def hilt_version = "2.44"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-
     //Testing
-    androidTestImplementation 'com.google.dagger:hilt-android-testing:2.44'
-    testImplementation 'com.google.dagger:hilt-android-testing:2.44'
-    kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.44'
 
-    def espresso_version = "3.4.0"
-    testImplementation 'junit:junit:4.13.2'
+    def espresso_version = "3.5.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-    implementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
     androidTestImplementation "androidx.navigation:navigation-testing:$navigation_version"
-
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     androidTestImplementation "io.mockk:mockk:1.13.3"
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    testImplementation "androidx.test.espresso:espresso-idling-resource:$espresso_version"
+    testImplementation 'junit:junit:4.13.2'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
     testImplementation "io.mockk:mockk:1.13.3"
+    testImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+
 }
