--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,18 @@ jobs:
           command: |
             ./gradlew assembleRelease
 
+      - store_artifacts:
+          path: app/build/reports
+      - run:
+          name: Send email with report
+          command: |
+            echo "Sending email with build report"
+            echo "Attaching report from $CIRCLE_ARTIFACTS/app/build/reports"
+            echo "Build status: $CIRCLE_BUILD_STATUS"
+            echo "Sending email to $EMAIL_RECIPIENT"
+            echo "Subject: Build report for $CIRCLE_PROJECT_REPONAME"
+            cat $CIRCLE_ARTIFACTS/app/build/reports/debug.txt | mail -s "Build report for $CIRCLE_PROJECT_REPONAME" -a "From: CircleCI <noreply@circleci.com>" $EMAIL_RECIPIENT
+
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
