--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             ./gradlew assembleRelease
 
       - store_artifacts:
-          path: app/build/reports
+          path: app/build/outputs/apk/debug/app-debug.apk
       - run:
           name: Send email with report
           command: |
