--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
             ./gradlew assembleRelease
 
       - store_artifacts:
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: app/build/outputs/apk/
+          destination: apk
       - run:
           name: Send email with report
           command: |
